# ona-events

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.ona/: automations.yaml
src/ona_events_demo/: __init__.py  cli.py
tests/: test_cli.py
