[project]
name = "ona-events"
version = "0.1.0"
description = "Demo app that watches Ona events and logs them to stdout."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpod-sdk>=0.10.0",
]

[project.scripts]
ona-events = "ona_events_demo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ona_events_demo"]
